--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- font color -->
+    <color name="custom_blacktext">#FF404040</color>
+    <color name="custom_subtext">#FFC7C9D9</color>
+    <color name="custom_linktext">#FF6E5DE7</color>
 </resources>
