--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -93,7 +93,7 @@
         app:layout_constraintTop_toBottomOf="@id/et_password_layout" />
 
     <TextView
-        android:id="@+id/prompt_email"
+        android:id="@+id/prompt_account"
         style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -114,7 +114,7 @@
         app:layout_constraintEnd_toStartOf="@+id/btn_login_guest"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/guideline1"
-        app:layout_constraintTop_toBottomOf="@+id/prompt_email"
+        app:layout_constraintTop_toBottomOf="@+id/prompt_account"
         app:layout_constraintVertical_bias="0.494" />
 
     <com.google.android.material.button.MaterialButton
