--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -22,7 +22,7 @@
         style="@style/Text.Header3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dimens32"
+        android:layout_marginTop="@dimen/dimens16"
         android:text="@string/header_welcome"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintHorizontal_bias="0.0"
@@ -40,16 +40,25 @@
         app:layout_constraintStart_toStartOf="@id/guideline1"
         app:layout_constraintTop_toBottomOf="@id/header_login" />
 
+    <TextView
+        android:id="@+id/tv_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/Text.Header4"
+        android:text="@string/prompt_email"
+        android:layout_marginTop="@dimen/dimens32"
+        app:layout_constraintTop_toBottomOf="@id/subheader_login"
+        app:layout_constraintStart_toStartOf="@id/guideline1" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/et_email_layout"
         style="@style/TextInputLayoutStyle1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dimens32"
-        android:hint="@string/prompt_email"
+        android:layout_marginTop="@dimen/dimens4"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintStart_toStartOf="@id/guideline1"
-        app:layout_constraintTop_toBottomOf="@id/subheader_login">
+        app:layout_constraintTop_toBottomOf="@id/tv_email">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_email_text"
@@ -61,17 +70,26 @@
             android:maxLines="1" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <TextView
+        android:id="@+id/tv_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/Text.Header4"
+        android:text="@string/prompt_password"
+        android:layout_marginTop="@dimen/dimens8"
+        app:layout_constraintTop_toBottomOf="@id/et_email_layout"
+        app:layout_constraintStart_toStartOf="@id/guideline1" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/et_password_layout"
         style="@style/TextInputLayoutStyle1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dimens8"
-        android:hint="@string/prompt_password"
+        android:layout_marginTop="@dimen/dimens4"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@id/guideline1"
-        app:layout_constraintTop_toBottomOf="@id/et_email_layout">
+        app:layout_constraintTop_toBottomOf="@id/tv_password">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_password_text"
@@ -111,12 +129,11 @@
         android:layout_height="60dp"
         android:text="@string/action_login"
         app:cornerRadius="12dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline4"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_login_guest"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/guideline1"
-        app:layout_constraintTop_toBottomOf="@+id/prompt_account"
-        app:layout_constraintVertical_bias="0.494" />
+        app:layout_constraintTop_toBottomOf="@+id/prompt_account" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_login_guest"
@@ -152,13 +169,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="@dimen/dimens32" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_end="@dimen/dimens32" />
 
     <ProgressBar
         android:id="@+id/loading"
