--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -22,23 +22,32 @@
         style="@style/Text.Header3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dimens32"
+        android:layout_marginTop="@dimen/dimens16"
         android:text="@string/header_register"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@id/guideline1"
         app:layout_constraintTop_toBottomOf="@id/login_image" />
 
+    <TextView
+        android:id="@+id/tv_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/Text.Header4"
+        android:text="@string/prompt_name"
+        android:layout_marginTop="@dimen/dimens16"
+        app:layout_constraintTop_toBottomOf="@id/header_login"
+        app:layout_constraintStart_toStartOf="@id/guideline1" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/et_name_layout"
         style="@style/TextInputLayoutStyle1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dimens32"
-        android:hint="@string/prompt_name"
+        android:layout_marginTop="@dimen/dimens4"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintStart_toStartOf="@id/guideline1"
-        app:layout_constraintTop_toBottomOf="@id/header_login">
+        app:layout_constraintTop_toBottomOf="@id/tv_name">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_name_text"
@@ -50,16 +59,25 @@
             android:maxLines="1" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <TextView
+        android:id="@+id/tv_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/Text.Header4"
+        android:text="@string/prompt_email"
+        android:layout_marginTop="@dimen/dimens8"
+        app:layout_constraintTop_toBottomOf="@id/et_name_layout"
+        app:layout_constraintStart_toStartOf="@id/guideline1" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/et_email_layout"
         style="@style/TextInputLayoutStyle1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dimens8"
-        android:hint="@string/prompt_email"
+        android:layout_marginTop="@dimen/dimens4"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintStart_toStartOf="@id/guideline1"
-        app:layout_constraintTop_toBottomOf="@id/et_name_layout">
+        app:layout_constraintTop_toBottomOf="@id/tv_email">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_email_text"
@@ -71,17 +89,26 @@
             android:maxLines="1" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <TextView
+        android:id="@+id/tv_password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/Text.Header4"
+        android:text="@string/prompt_password"
+        android:layout_marginTop="@dimen/dimens8"
+        app:layout_constraintTop_toBottomOf="@id/et_email_layout"
+        app:layout_constraintStart_toStartOf="@id/guideline1" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/et_password_layout"
         style="@style/TextInputLayoutStyle1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimens8"
-        android:hint="@string/prompt_password"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@id/guideline1"
-        app:layout_constraintTop_toBottomOf="@id/et_email_layout">
+        app:layout_constraintTop_toBottomOf="@id/tv_password">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_password_text"
@@ -121,11 +148,10 @@
         android:layout_height="60dp"
         android:text="@string/action_register"
         app:cornerRadius="12dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline4"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline1"
-        app:layout_constraintTop_toBottomOf="@+id/prompt_account"
-        app:layout_constraintVertical_bias="0.494" />
+        app:layout_constraintTop_toBottomOf="@+id/prompt_account" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline1"
@@ -148,13 +174,6 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="@dimen/dimens32" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_end="@dimen/dimens32" />
-    
     <ProgressBar
         android:id="@+id/loading"
         android:layout_width="wrap_content"
