--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="custom_blacktext">#FF404040</color>
     <color name="custom_subtext">#FFC7C9D9</color>
     <color name="custom_linktext">#FF6E5DE7</color>
+    <color name="custom_white">#FFFAFAFA</color>
 </resources>
