--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,7 @@
         <!-- Customize your theme here. -->
         <item name="fontFamily">@font/poppins_regular</item>
         <item name="android:textColor">@color/black</item>
+        <item name="background">@color/custom_white</item>
     </style>
 
     <!-- SplashScreen Theme -->
