--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -33,6 +33,7 @@
         app:layout_constraintEnd_toEndOf="@id/guideline2" />
 
     <TextView
+        android:id="@+id/user_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/nama_user"
