feat: implement auth check, action, and flow for guest login

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -36,6 +36,11 @@
         <action
             android:id="@+id/action_storyFragment_to_settingActivity"
             app:destination="@id/settingActivity" />
+        <action
+            android:id="@+id/action_storyFragment_to_registerFragment"
+            app:destination="@id/registerFragment"
+            app:popUpTo="@id/storyFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <activity
         android:id="@+id/settingActivity"
