feat: minor changes (also found bug when moving from login fragment to story fragment, if the login fragment is being popped up, it will cause the shared pref to not save data)

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -34,7 +34,8 @@
             app:destination="@id/registerFragment" />
         <action
             android:id="@+id/action_loginFragment_to_storyFragment"
-            app:destination="@id/storyFragment" />
+            app:destination="@id/storyFragment"
+            app:popUpToInclusive="false" />
         <action
             android:id="@+id/action_loginFragment_to_guestFragment"
             app:destination="@id/guestFragment" />
