--- a/core/src/main/res/layout/item_list_story.xml
+++ b/core/src/main/res/layout/item_list_story.xml
@@ -51,7 +51,9 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="8dp"
+            android:ellipsize="end"
             android:fontFamily="@font/poppins_regular"
+            android:maxLines="2"
             android:text="@string/story_text"
             android:textColor="@color/white"
             app:layout_constraintBottom_toTopOf="@id/tv_datetime"
