--- a/app/src/main/res/layout/activity_story.xml
+++ b/app/src/main/res/layout/activity_story.xml
@@ -48,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="@dimen/dimens32" />
+        app:layout_constraintGuide_end="@dimen/dimens48" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_story"
@@ -76,8 +76,8 @@
         style="@style/Text.Header4"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/message_for_guest"
         android:layout_marginTop="20dp"
+        android:text="@string/message_for_guest"
         android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline1"
@@ -88,10 +88,10 @@
         style="@style/Text.Button"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:text="@string/action_register"
-        app:cornerRadius="12dp"
-        android:visibility="gone"
         android:layout_marginTop="@dimen/dimens20"
+        android:text="@string/action_register"
+        android:visibility="gone"
+        app:cornerRadius="12dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline1"
         app:layout_constraintTop_toBottomOf="@+id/message_for_guest" />
@@ -101,8 +101,8 @@
         style="@style/Text.Button"
         android:layout_width="0dp"
         android:layout_height="60dp"
+        android:background="@drawable/rounded_berbagi_button"
         android:text="@string/share"
-        app:cornerRadius="12dp"
         app:icon="@drawable/ic_pen"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toEndOf="parent" />
