--- a/app/src/main/res/layout/activity_detail_story.xml
+++ b/app/src/main/res/layout/activity_detail_story.xml
@@ -40,6 +40,7 @@
                 android:adjustViewBounds="true"
                 android:background="@android:color/white"
                 android:contentDescription="@string/story_image"
+                android:transitionName="image"
                 android:scaleType="matrix"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -55,6 +56,7 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="8dp"
                 android:fontFamily="@font/poppins_regular"
+                android:transitionName="text"
                 android:text="@string/story_text"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -70,6 +72,7 @@
                 android:fontFamily="@font/poppins_regular"
                 android:text="@string/story_datetime"
                 android:textColor="@color/custom_subtext"
+                android:transitionName="datetime"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_user_and_paragraph" />
