--- a/app/src/main/res/layout/activity_story.xml
+++ b/app/src/main/res/layout/activity_story.xml
@@ -54,7 +54,6 @@
         android:id="@+id/rv_story"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline1"
@@ -71,9 +70,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/image_sorry"
+        android:layout_width="0dp"
+        android:layout_height="300dp"
+        android:contentDescription="@string/sorry_guest"
+        android:src="@drawable/ic_sorry_bro"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="@id/guideline2"
+        app:layout_constraintStart_toStartOf="@id/guideline1"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_story_layout" />
+
     <TextView
         android:id="@+id/message_for_guest"
-        style="@style/Text.Header4"
+        style="@style/Text.Header5"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -81,7 +91,7 @@
         android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintStart_toStartOf="@+id/guideline1"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_story_layout" />
+        app:layout_constraintTop_toBottomOf="@+id/image_sorry" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_register2"
