--- a/app/src/main/res/layout/custom_toolbar_story.xml
+++ b/app/src/main/res/layout/custom_toolbar_story.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/logo_image"
-        android:layout_width="120dp"
-        android:layout_height="60dp"
+    <TextView
+        style="@style/Text.Header2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dimens20"
         android:layout_marginTop="@dimen/dimens20"
-        android:layout_marginBottom="@dimen/dimens16"
-        android:contentDescription="@string/logo_image"
-        android:src="@drawable/ic_launcher_foreground"
+        android:layout_marginBottom="@dimen/dimens20"
+        android:text="@string/dicoding_sutoori"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,11 +20,12 @@
         android:id="@+id/btn_setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dimens32"
         android:layout_marginEnd="@dimen/dimens16"
         android:contentDescription="@string/image_button_setting"
         android:minHeight="48dp"
+        android:background="@color/white"
         android:src="@drawable/ic_settings"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
