--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,13 +8,13 @@
     tools:context=".ui.login.LoginFragment">
 
     <ImageView
-        android:id="@+id/login_image"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:id="@+id/iv_login_image"
+        android:layout_width="0dp"
+        android:layout_height="240dp"
         android:contentDescription="@string/login_illust"
-        android:src="@mipmap/ic_launcher"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:src="@drawable/image_welcome"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintStart_toStartOf="@+id/guideline1"
         app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
     <TextView
@@ -27,7 +27,7 @@
         app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@id/guideline1"
-        app:layout_constraintTop_toBottomOf="@id/login_image" />
+        app:layout_constraintTop_toBottomOf="@id/iv_login_image" />
 
     <TextView
         android:id="@+id/subheader_login"
@@ -42,39 +42,39 @@
 
     <TextView
         android:id="@+id/tv_email"
+        style="@style/Text.Header4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/Text.Header4"
+        android:layout_marginTop="@dimen/dimens16"
         android:text="@string/prompt_email"
-        android:layout_marginTop="@dimen/dimens32"
-        app:layout_constraintTop_toBottomOf="@id/subheader_login"
-        app:layout_constraintStart_toStartOf="@id/guideline1" />
+        app:layout_constraintStart_toStartOf="@id/guideline1"
+        app:layout_constraintTop_toBottomOf="@id/subheader_login" />
 
     <com.naufaldystd.storyapps.utils.component.CustomEmailField
         android:id="@+id/et_email_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv_email"
+        app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintStart_toStartOf="@id/guideline1"
-        app:layout_constraintEnd_toEndOf="@id/guideline2" />
+        app:layout_constraintTop_toBottomOf="@id/tv_email" />
 
     <TextView
         android:id="@+id/tv_password"
+        style="@style/Text.Header4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/Text.Header4"
-        android:text="@string/prompt_password"
         android:layout_marginTop="@dimen/dimens8"
-        app:layout_constraintTop_toBottomOf="@id/et_email_text"
-        app:layout_constraintStart_toStartOf="@id/guideline1" />
+        android:text="@string/prompt_password"
+        app:layout_constraintStart_toStartOf="@id/guideline1"
+        app:layout_constraintTop_toBottomOf="@id/et_email_text" />
 
     <com.naufaldystd.storyapps.utils.component.CustomPasswordField
         android:id="@+id/et_password_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv_password"
+        app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintStart_toStartOf="@id/guideline1"
-        app:layout_constraintEnd_toEndOf="@id/guideline2" />
+        app:layout_constraintTop_toBottomOf="@id/tv_password" />
 
     <TextView
         android:id="@+id/cta_register"
@@ -115,14 +115,16 @@
         style="@style/Text.Button"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
-        android:backgroundTint="@color/purple_200"
+        android:backgroundTint="@color/custom_white"
         android:text="@string/action_login_guest"
+        android:textColor="@color/black"
         app:cornerRadius="12dp"
         app:layout_constraintBottom_toBottomOf="@+id/btn_login"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/btn_login"
-        app:layout_constraintTop_toTopOf="@+id/btn_login" />
+        app:layout_constraintTop_toTopOf="@+id/btn_login"
+        app:strokeWidth="1dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline1"
@@ -150,9 +152,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
