--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -8,13 +8,13 @@
     tools:context=".ui.login.LoginFragment">
 
     <ImageView
-        android:id="@+id/login_image"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:id="@+id/iv_register_image"
+        android:layout_width="0dp"
+        android:layout_height="240dp"
         android:contentDescription="@string/login_illust"
-        android:src="@mipmap/ic_launcher"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:src="@drawable/image_signup"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintStart_toStartOf="@+id/guideline1"
         app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
     <TextView
@@ -27,7 +27,7 @@
         app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@id/guideline1"
-        app:layout_constraintTop_toBottomOf="@id/login_image" />
+        app:layout_constraintTop_toBottomOf="@id/iv_register_image" />
 
     <TextView
         android:id="@+id/tv_name"
