feat: replace loading progress bar on story activity with shimmer

--- a/core/src/main/res/layout/item_list_placeholder.xml
+++ b/core/src/main/res/layout/item_list_placeholder.xml
@@ -23,6 +23,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:adjustViewBounds="true"
+                android:background="@color/shimmer_gray1"
                 android:contentDescription="@string/story_image"
                 android:scaleType="fitXY"
                 app:layout_constraintBottom_toBottomOf="@+id/view"
@@ -36,7 +37,7 @@
                 android:id="@+id/view"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:background="@color/white"
+                android:background="#7F000000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -57,10 +58,10 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_marginBottom="8dp"
+                android:background="@color/shimmer_gray1"
                 android:ellipsize="end"
                 android:fontFamily="@font/poppins_regular"
                 android:maxLines="2"
-                android:text="@string/story_text"
                 android:textColor="@color/dicoding_black"
                 app:layout_constraintBottom_toTopOf="@id/tv_datetime_list"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -68,11 +69,11 @@
 
             <TextView
                 android:id="@+id/tv_datetime_list"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
+                android:background="@color/shimmer_gray1"
                 android:fontFamily="@font/poppins_regular"
-                android:text="@string/story_datetime"
                 android:textColor="@color/custom_subtext"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
