--- a/app/src/main/res/layout/activity_story.xml
+++ b/app/src/main/res/layout/activity_story.xml
@@ -50,97 +50,27 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_end="@dimen/dimens48" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_story"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_nav_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_nav_menu" />
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/nav_host_fragment_story"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/guideline2"
-        app:layout_constraintStart_toStartOf="@+id/guideline1"
+        app:defaultNavHost="true"
+        app:flow_verticalBias="0.0"
+        app:layout_constraintBottom_toTopOf="@id/bottom_nav_view"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_story_layout"
-        tools:listitem="@layout/item_list_story" />
-
-    <com.facebook.shimmer.ShimmerFrameLayout
-        android:id="@+id/loading"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/guideline2"
-        app:layout_constraintStart_toStartOf="@id/guideline1"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_story_layout"
-        app:shimmer_auto_start="true">
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <include layout="@layout/item_list_placeholder" />
-
-                <include layout="@layout/item_list_placeholder" />
-
-                <include layout="@layout/item_list_placeholder" />
-
-                <include layout="@layout/item_list_placeholder" />
-
-                <include layout="@layout/item_list_placeholder" />
-
-                <include layout="@layout/item_list_placeholder" />
-            </LinearLayout>
-        </ScrollView>
-    </com.facebook.shimmer.ShimmerFrameLayout>
-
-    <ImageView
-        android:id="@+id/image_sorry"
-        android:layout_width="0dp"
-        android:layout_height="300dp"
-        android:contentDescription="@string/sorry_guest"
-        android:src="@drawable/ic_sorry_bro"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="@id/guideline2"
-        app:layout_constraintStart_toStartOf="@id/guideline1"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_story_layout" />
-
-    <TextView
-        android:id="@+id/message_for_guest"
-        style="@style/Text.Header5"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="@string/message_for_guest"
-        android:visibility="gone"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintStart_toStartOf="@+id/guideline1"
-        app:layout_constraintTop_toBottomOf="@+id/image_sorry" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_register2"
-        style="@style/Text.Button"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="@dimen/dimens20"
-        android:text="@string/action_register"
-        android:visibility="gone"
-        app:cornerRadius="12dp"
-        app:layout_constraintEnd_toStartOf="@+id/guideline2"
-        app:layout_constraintStart_toStartOf="@+id/guideline1"
-        app:layout_constraintTop_toBottomOf="@+id/message_for_guest" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_add_story"
-        style="@style/Text.Button"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:background="@drawable/rounded_berbagi_button"
-        android:text="@string/share"
-        app:icon="@drawable/ic_pen"
-        app:layout_constraintBottom_toTopOf="@+id/guideline4"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:navGraph="@navigation/nav_mobile_graph" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
