--- a/app/src/main/res/layout/custom_toolbar_add_story.xml
+++ b/app/src/main/res/layout/custom_toolbar_add_story.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dimens16"
+        android:backgroundTint="@color/white"
         android:contentDescription="@string/image_button_setting"
         android:minHeight="48dp"
         android:src="@drawable/ic_back"
