--- a/app/src/main/res/layout/custom_toolbar_detail.xml
+++ b/app/src/main/res/layout/custom_toolbar_detail.xml
@@ -11,6 +11,7 @@
         android:layout_margin="@dimen/dimens16"
         android:background="@color/white"
         android:contentDescription="@string/image_button_setting"
+        android:minWidth="48dp"
         android:minHeight="48dp"
         android:src="@drawable/ic_back"
         app:layout_constraintBottom_toBottomOf="parent"
