--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -7,41 +7,26 @@
     android:layout_height="match_parent"
     tools:context=".ui.setting.SettingActivity">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/toolbar_detail_layout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <include
-            android:id="@+id/toolbar_setting"
-            layout="@layout/custom_toolbar_detail" />
-    </com.google.android.material.appbar.AppBarLayout>
-
     <ImageView
         android:id="@+id/user_profile_image"
-        android:contentDescription="@string/user_profile_image"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginTop="@dimen/dimens20"
+        android:contentDescription="@string/user_profile_image"
         android:src="@drawable/ic_profile"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_detail_layout"
+        app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintStart_toStartOf="@id/guideline1"
-        app:layout_constraintEnd_toEndOf="@id/guideline2" />
+        app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
     <TextView
         android:id="@+id/user_name"
+        style="@style/Text.Header3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/nama_user"
-        style="@style/Text.Header3"
         android:layout_marginTop="@dimen/dimens8"
-        app:layout_constraintTop_toBottomOf="@id/user_profile_image"
+        android:text="@string/nama_user"
+        app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintStart_toStartOf="@id/guideline1"
-        app:layout_constraintEnd_toEndOf="@id/guideline2" />
+        app:layout_constraintTop_toBottomOf="@id/user_profile_image" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_logout"
