feat: refactor fragment placement based on activity, also change main pckg into auth

--- a/app/src/main/res/navigation/nav_auth_graph.xml
+++ b/app/src/main/res/navigation/nav_auth_graph.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/loginFragment">
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.naufaldystd.storyapps.ui.login.LoginFragment"
+        android:name="com.naufaldystd.storyapps.ui.auth.login.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login" >
         <action
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
-        android:name="com.naufaldystd.storyapps.ui.register.RegisterFragment"
+        android:name="com.naufaldystd.storyapps.ui.auth.register.RegisterFragment"
         android:label="RegisterFragment" >
         <action
             android:id="@+id/action_registerFragment_to_loginFragment"
