feat: refactor most of livedata call into flow from activity/fragment/viewmodel

--- a/app/src/main/res/layout/activity_detail_story.xml
+++ b/app/src/main/res/layout/activity_detail_story.xml
@@ -37,10 +37,8 @@
                 android:id="@+id/iv_item_image"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:background="@android:color/white"
                 android:contentDescription="@string/story_image"
-                android:scaleType="fitXY"
+                android:scaleType="matrix"
                 android:transitionName="image"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +69,7 @@
                 android:layout_marginTop="@dimen/dimens8"
                 android:fontFamily="@font/poppins_regular"
                 android:text="@string/story_datetime"
-                android:textColor="@color/custom_subtext"
+                android:textColor="#757575"
                 android:textSize="16sp"
                 android:transitionName="datetime"
                 app:layout_constraintStart_toStartOf="parent"
