--- a/core/src/main/res/layout/item_list_story.xml
+++ b/core/src/main/res/layout/item_list_story.xml
@@ -5,7 +5,6 @@
     android:clipToPadding="false">
 
     <com.google.android.material.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -20,35 +19,16 @@
 
             <ImageView
                 android:id="@+id/iv_item_image_list"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:adjustViewBounds="true"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
                 android:contentDescription="@string/story_image"
-                android:scaleType="fitXY"
-                app:layout_constraintBottom_toBottomOf="@+id/view"
-                app:layout_constraintDimensionRatio="H,1.5:1"
+                android:scaleType="centerCrop"
+                android:layout_marginBottom="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:src="@drawable/ic_launcher_background" />
-
-            <View
-                android:id="@+id/view"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:background="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/top_space" />
-
-            <androidx.legacy.widget.Space
-                android:id="@+id/top_space"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                app:layout_constraintBottom_toTopOf="@+id/tv_user_and_paragraph_list"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintBottom_toTopOf="@id/tv_user_and_paragraph_list"
+                android:src="@drawable/ic_launcher_background" />
 
             <TextView
                 android:id="@+id/tv_user_and_paragraph_list"
