--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="custom_white">#FFFAFAFA</color>
     <color name="placeholder">#6FB6B6B6</color>
     <color name="shimmer_gray1">#DDDDDD</color>
+    <color name="shimmer_gray2">#7F000000</color>
 </resources>
