--- a/app/src/main/res/layout/activity_add_story.xml
+++ b/app/src/main/res/layout/activity_add_story.xml
@@ -22,12 +22,12 @@
 
     <ImageView
         android:id="@+id/iv_preview"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:adjustViewBounds="true"
         android:background="@android:color/white"
         android:contentDescription="@string/story_image"
-        android:scaleType="centerInside"
+        android:scaleType="centerCrop"
         android:src="@drawable/ic_upload_image"
         app:layout_constraintDimensionRatio="H,1.5:1"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
