--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,11 +15,18 @@
         <item name="fontFamily">@font/poppins_regular</item>
         <item name="android:textColor">@color/black</item>
         <item name="background">@color/custom_white</item>
+        <!-- enable window content transitions -->
         <item name="android:windowActivityTransitions">true</item>
+        <!-- specify shared element transitions -->
         <item name="android:windowSharedElementEnterTransition">
-            @transition/change_transform</item>
+            @transition/change_image_transform</item>
         <item name="android:windowSharedElementExitTransition">
-            @transition/change_transform</item>
+            @transition/change_image_transform</item>
+    </style>
+
+    <style name="WindowAnimationTransition">
+        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
+        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
     </style>
 
     <!-- SplashScreen Theme -->
