--- a/core/src/main/res/layout/item_list_story.xml
+++ b/core/src/main/res/layout/item_list_story.xml
@@ -40,6 +40,7 @@
                 android:ellipsize="end"
                 android:fontFamily="@font/poppins_regular"
                 android:maxLines="2"
+                android:textSize="16sp"
                 android:text="@string/story_text"
                 android:textColor="@color/dicoding_black"
                 app:layout_constraintBottom_toTopOf="@id/tv_datetime_list"
@@ -53,7 +54,7 @@
                 android:layout_margin="20dp"
                 android:fontFamily="@font/poppins_regular"
                 android:text="@string/story_datetime"
-                android:textColor="@color/custom_subtext"
+                android:textColor="#757575"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
